fix font size on mobile

--- a/src/Home.css
+++ b/src/Home.css
@@ -8,7 +8,7 @@
 }
 
 .mainTitle {
-  font-size: 2.5rem;
+  font-size: 1.75rem;
   font-family: serif;
   text-align: center;
   color: white;
@@ -21,7 +21,7 @@
 }
 
 .mainSubTitle {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .coverPhoto {
@@ -38,7 +38,12 @@
 
 @media only screen and (min-width: 1000px) {
   .mainTitle {
+    font-size: 2.5rem;
     width: 65%;
+  }
+
+  .mainSubTitle {
+    font-size: 1.5rem;
   }
 
   .coverPhoto img {
